--- a/Input List/index.html
+++ b/Input List/index.html
@@ -23,15 +23,14 @@
         <!-- shown list -->
         <h2>Task</h2>
         <div id="task">
-                <div class="task_input">
-                        
+                <!-- <div class="task_input">
                         <div class="input_bar">
                         <input type="text" name="t_input" class="t_input" value="" readonly>
                         <button type="button" class="edit_btn"><i class="fa-solid fa-pen"></i></button>
                         <button type="button" class="delete_btn" onclick=""><i class="fa-solid fa-trash"></i></button>
                         </div>
                         
-                </div>
+                </div> -->
         </div>
 </body>
 </html>
